--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #f9f9f9;
+    background-image: url(https://i.pinimg.com/564x/2a/7c/c9/2a7cc9772cd21323f61c26862fa19a63.jpg);
 }
 
 header {
@@ -21,12 +22,37 @@ h1 {
     margin-bottom: 20px;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 100px;
+}
+
 section {
-    margin: 20px;
+    margin: 10px;
     padding: 20px;
     background-color: white;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+li {
+    list-style: none;
+}
+
+input, select {
+    width: 100%;
+    height: 3em;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #FFC100;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
@@ -47,6 +73,7 @@ button {
     border:2px solid transparent;
     cursor: pointer;
     font-weight: 600;
+    width: 100%;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
@@ -64,4 +91,32 @@ footer {
     color: white;
     padding: 10px;
     margin-top: 20px;
+}
+
+footer div {
+    margin-top: 10px;
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    gap: 20px;
+}
+
+footer a {
+    color: white;
+    font-size: 30px;
+}
+
+footer a:hover {
+    transform: scale(1.2);
+}
+
+@media screen and (max-width: 576px) {
+    main {
+        padding: 10px 20px;
+    }
+}
+@media screen and (max-width: 992px) {
+    main {
+        padding: 10px 40px;
+    }
 }
